# sidewall_rs

./: .env  .gitignore  Cargo.toml  control_front.parquet  diesel.toml  sidewall_configs.toml  sql_raw.py
migrations/2025-10-17-061835-0000_sidewall/: up.sql
migrations/2025-10-20-144234-0000_sidewall/: down.sql  up.sql
src/: assemble_df.rs  config.rs  config_meta.rs  diesel_model.rs  diesel_query.rs  guilun_qushu.rs  lib.rs  main.rs  schema.rs  sidewall_configs.toml
