[package]
name = "guilun_sidewall"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
diesel = { version = "2.2.0", features = [
    "mysql",
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
toml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.51.0", features = ["full"] }
urlencoding = "2.1.3"
