[package]
name = "guilun_sidewall"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
# env_logger = "0.11"
simplelog = "0.12.2"
diesel = { version = "2.3.1", features = [
    "mysql",
    # "sqlite",
    "chrono",
    # "returning_clauses_for_sqlite_3_35",
    "128-column-tables",
] }
dotenvy = "0.15"
toml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.51.0", features = ["full", "json"] }
urlencoding = "2.1.3"
